@@ -6357,6 +6357,8 @@ namespace {
  * functions to get the URI and the MIME content type associated with the
  * stream. Users of the library must provide an implementation of this class,
  * to be returned from <code>openvrml::browser::do_get_resource</code>.
+ *
+ * @sa openvrml::browser::do_get_resource(const std::string &)
  */
 
 /**
@@ -6919,9 +6921,21 @@ openvrml::node_class_id::operator std::string() const
  */
 
 /**
+ * @example sdl_viewer.cpp
+ *
+ * Basic example using openvrml::browser.
+ */
+
+/**
  * @var openvrml::browser::Vrml97Parser
  *
  * @brief VRML97 parser generated by ANTLR.
+ */
+
+/**
+ * @var openvrml::browser::X3DVrmlParser
+ *
+ * @brief X3D VRML parser generated by ANTLR.
  */
 
 /**
@@ -7696,7 +7710,15 @@ openvrml::browser::get_resource(const std::string & uri)
  *         explicit file_resource_istream(const std::string & path):
  *             resource_istream(&this->buf_)
  *         {
- *             this->buf_.open(path.c_str(), ios_base::in);
+ *             //
+ *             // Note that the failbit is set in the constructor if no data
+ *             // can be read from the stream.  This is important.  If the
+ *             // failbit is not set on such a stream, OpenVRML will attempt
+ *             // to read data from a stream that cannot provide it.
+ *             //
+ *             if (!this->buf_.open(path.c_str(), ios_base::in)) {
+ *                 this->setstate(ios_base::failbit);
+ *             }
  *         }
  *
  *         void url(const std::string & str) throw (std::bad_alloc)
@@ -7704,6 +7726,7 @@ openvrml::browser::get_resource(const std::string & uri)
  *             this->url_ = str;
  *         }
  *
+ *     private:
  *         virtual const std::string url() const throw ()
  *         {
  *             return this->url_;
@@ -7716,15 +7739,20 @@ openvrml::browser::get_resource(const std::string & uri)
  *             // however, that is beyond the scope of this example (which
  *             // is intended to be portable and stupid).
  *             //
+ *             using std::find;
  *             using std::string;
  *             using boost::algorithm::iequals;
+ *             using boost::next;
  *             string media_type = "application/octet-stream";
- *             const string::size_type dot_pos = this->url_.rfind('.');
- *             if (dot_pos == string::npos
- *                 || this->url_.size() < dot_pos + 1) {
+ *             const string::const_reverse_iterator dot_pos =
+ *                 find(this->url_.rbegin(), this->url_.rend(), '.');
+ *             if (dot_pos == this->url_.rend()
+ *                 || next(dot_pos.base()) == this->url_.end()) {
  *                 return media_type;
  *             }
- *             const string ext = this->url_.substr(dot_pos + 1);
+ *             const string::const_iterator hash_pos =
+ *                 find(next(dot_pos.base()), this->url_.end(), '#');
+ *             const string ext(dot_pos.base(), hash_pos);
  *             if (iequals(ext, "wrl")) {
  *                 media_type = "model/vrml";
  *             } else if (iequals(ext, "png")) {
